--- a/ansible/roles/jellyfin/templates/jellyfin.env.j2
+++ b/ansible/roles/jellyfin/templates/jellyfin.env.j2
@@ -4,8 +4,8 @@ PGID={{ system_group }}
 
 # Paths & Network
 TZ={{ timezone }}
-CONFIG_PATH={{ storage.ansible.compose }}/jellyfin/config
-CACHE_PATH={{ storage.ansible.compose }}/jellyfin/cache
-MEDIA_PATH={{ storage.media.jellyfin_media | dirname }} # /mnt/nas/media
+JELLYFIN_CONFIG_PATH={{ storage.ansible.compose }}/jellyfin/config
+JELLYFIN_CACHE_PATH={{ storage.ansible.compose }}/jellyfin/cache
+JELLYFIN_MEDIA_PATH={{ storage.media.jellyfin_root }}
 PROXY_NETWORK={{ proxy_network_name }}
 JELLYFIN_DOMAIN={{ service_domains.jellyfin }}
