--- a/ansible/roles/immich/templates/immich.env.j2
+++ b/ansible/roles/immich/templates/immich.env.j2
@@ -20,8 +20,8 @@ PGID={{ system_group }}
 
 # Paths & Network
 TZ={{ timezone }}
-DB_PATH={{ storage.databases.immich }}
-UPLOAD_PATH={{ storage.media.immich_photos }}
-MODEL_CACHE_PATH={{ storage.ansible.compose }}/immich/model-cache
+IMMICH_DB_DATA_PATH={{ storage.databases.immich }}
+IMMICH_UPLOAD_PATH={{ storage.media.immich_photos }}
+IMMICH_MODEL_CACHE_PATH={{ storage.ansible.compose }}/immich/model-cache
 PROXY_NETWORK={{ proxy_network_name }}
 IMMICH_DOMAIN={{ service_domains.immich }}
