--- a/ansible/roles/nextcloud/templates/nextcloud.env.j2
+++ b/ansible/roles/nextcloud/templates/nextcloud.env.j2
@@ -22,7 +22,7 @@ PGID={{ system_group }}
 
 # Paths & Network
 TZ={{ timezone }}
-DB_PATH={{ storage.databases.nextcloud }}
-HTML_PATH={{ storage.ansible.compose }}/nextcloud/html
-DATA_PATH={{ storage.media.nextcloud_data }}
+NEXTCLOUD_DB_DATA_PATH={{ storage.databases.nextcloud }}
+NEXTCLOUD_HTML_PATH={{ storage.ansible.compose }}/nextcloud/html
+NEXTCLOUD_DATA_PATH={{ storage.media.nextcloud_data }}
 PROXY_NETWORK={{ proxy_network_name }}
