--- a/ansible/roles/proxy/templates/traefik.yml.j2
+++ b/ansible/roles/proxy/templates/traefik.yml.j2
@@ -48,15 +48,13 @@ entryPoints:
 
   websecure:
     address: ":443"
-{% if proxy_enable_letsencrypt %}
     http:
       tls:
-        certResolver: letsencrypt
+        certResolver: "{{ 'letsencrypt' if proxy_enable_letsencrypt else '' }}"
         domains:
           - main: "{{ base_domain }}"
             sans:
               - "*.{{ base_domain }}"
-{% endif %}
 
   # EntryPoint dédié aux métriques/API (interne seulement)
   traefik:
