--- a/ansible/roles/jellyfin/templates/jellyfin.env.j2
+++ b/ansible/roles/jellyfin/templates/jellyfin.env.j2
@@ -1,6 +1,6 @@
 # Permissions
-PUID={{ system_user }}
-PGID={{ system_group }}
+PUID={{ common_system_user }}
+PGID={{ common_system_group }}
 
 # Paths & Network
 TZ={{ timezone }}
