--- a/ansible/roles/nextcloud/templates/nextcloud.env.j2
+++ b/ansible/roles/nextcloud/templates/nextcloud.env.j2
@@ -17,8 +17,8 @@ OVERWRITECLIURL=https://{{ service_domains.nextcloud }}
 OVERWRITEPROTOCOL=https
 
 # Permissions
-PUID={{ system_user }}
-PGID={{ system_group }}
+PUID={{ common_system_user }}
+PGID={{ common_system_group }}
 
 # Paths & Network
 TZ={{ timezone }}
